@@ -3,6 +3,7 @@ package com.person.personservice.service;
 import com.person.personservice.model.PersonDTO;
 import com.person.personservice.persistence.domain.Person;
 import com.person.personservice.persistence.repository.PersonRepository;
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -14,6 +15,7 @@ import org.springframework.data.domain.PageRequest;
 
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
@@ -22,6 +24,8 @@ import static org.mockito.BDDMockito.given;
 class PersonServiceTest {
 
     private static final int PAGE_SIZE = 5;
+    private static final long ID = 1L;
+    private static final String PERSON_NAME = "testperson";
     @InjectMocks
     private PersonService personService;
 
@@ -31,10 +35,7 @@ class PersonServiceTest {
     @Test
     void testThatGetAllPersonReturnsAllPerson() {
         //given
-        Person person = new Person();
-        person.setId(1);
-        person.setName("testperson");
-        person.setParents(new LinkedHashSet<>());
+        Person person = createPerson();
 
         PageRequest pageable = PageRequest.of(0, PAGE_SIZE);
 
@@ -54,8 +55,43 @@ class PersonServiceTest {
         assertThat(result.isEmpty()).isFalse();
         assertThat(result.getTotalElements()).isEqualTo(1);
         List<PersonDTO> content = result.getContent();
-        assertThat(content.get(0).name()).isEqualTo("testperson");
-        assertThat(content.get(0).parentIds()).isEmpty();
+        assertThat(content.getFirst().name()).isEqualTo("testperson");
+        assertThat(content.getFirst().parentIds()).isEmpty();
+    }
+
+    @Test
+    void testThatIfPersonExistsInTableGetByIdReturnsPerson() {
+        //given
+        Person person = createPerson();
+        given(personRepository.findById(ID)).willReturn(Optional.of(person));
+
+        //when
+        Optional<PersonDTO> result = personService.getById(ID);
+
+        //then
+        assertThat(result.isEmpty()).isFalse();
+        PersonDTO personDTO = result.get();
+        assertThat(personDTO.name()).isEqualTo(PERSON_NAME);
+        assertThat(personDTO.parentIds()).isEmpty();
+    }
+
+    @Test
+    void testThatIfPersonNotExistsInTableGetByIdReturnsOptionalEmpty() {
+        given(personRepository.findById(ID)).willReturn(Optional.empty());
+
+        Optional<PersonDTO> result = personService.getById(ID);
+
+        assertThat(result).isEmpty();
+
+    }
+
+    @NotNull
+    private static Person createPerson() {
+        Person person = new Person();
+        person.setId(1);
+        person.setName(PERSON_NAME);
+        person.setParents(new LinkedHashSet<>());
+        return person;
     }
 
 }
